Adds missing translations
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1779 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/arb/languages.yml
+++ b/config-3/locales/arb/languages.yml
@@ -1,20 +1,20 @@
 arb:
   languages:
-    #>afr: 'Afrikaans'
-    #>amh: 'Amharic'
+    afr: 'لغة أفريقانية'
+    amh: 'لغة أمهرية'
     arb: 'العربية (الموحدة)'
-    #>aym: 'Aymara'
-    #>aze: 'Azerbaijani'
-    #>bel: 'Belarusian'
-    #>ben: 'Bengali'
+    aym: 'لغة أيمارا'
+    aze: 'لغة أذرية'
+    bel: 'لغة بيلاروسية'
+    ben: 'لغة بنغالية'
     #>bis: 'Bislama'
-    #>bul: 'Bulgarian'
+    bul: 'لغة بلغارية'
     #>cat: 'Catalan'
     #>ces: 'Czech'
-    #>cmn: 'Mandarin Chinese'
+    cmn: 'مندرين معيار'
     #>crs: 'Seselwa Creole French'
     #>dan: 'Danish'
-    #>deu: 'German'
+    deu: 'لغة ألمانية'
     #>div: 'Divehi'
     #>dzo: 'Dzongkha'
     #>ell: 'Greek'
@@ -38,7 +38,7 @@ arb:
     #>iba: 'Iban'
     #>ind: 'Indonesian'
     #>isl: 'Icelandic'
-    #>ita: 'Italian'
+    ita: 'لغة إيطالية'
     jpn: 'اليابانية'
     #>kat: 'Georgian'
     #>kaz: 'Kazakh'
@@ -74,7 +74,7 @@ arb:
     #>rar: 'Rarotongan'
     #>ron: 'Romanian'
     #>run: 'Rundi'
-    #>rus: 'Russian'
+    rus: 'لغة روسية'
     #>sag: 'Sango'
     #>sin: 'Sinhala; Sinhalese'
     #>slk: 'Slovak'
