--- a/config-3/locales/eng/action.yml
+++ b/config-3/locales/eng/action.yml
@@ -613,7 +613,6 @@ eng:
     account_value_current: 'Current Value'
     account_value_previous: 'Previous Value'
     accountancy: 'Accountancy'
-    accountancy_rights: 'Accountancy'
     accounting_balance: 'Accounting balance'
     accounts: 'Accounts'
     accounts_to_load: 'Accounts to load'
@@ -705,7 +704,6 @@ eng:
     column_title: 'Title'
     columns: 'Columns to import'
     commission: 'Commission'
-    company_rights: 'Company'
     complement_sort: 'Complement sort'
     complements: 'Complements'
     components: 'Components'
@@ -920,7 +918,6 @@ eng:
       zero: 'No emails'
     management: 'Management (Sales, purchases and stocks)'
     management_index: 'Management index'
-    management_rights: 'Management'
     mandates_fields: 'You have to fill at least one field'
     mandates_filters: 'You have to fill at least one filter'
     mandates_new_fields: 'You have to fill at least one new field'
@@ -1078,7 +1075,6 @@ eng:
       stocks: 'Stocks'
     product_update: 'Product update'
     production: 'Production management'
-    production_rights: 'Production'
     productions: 'Productions'
     products: 'Products'
     profitability: 'Profitability'
@@ -1104,7 +1100,6 @@ eng:
     reflect: 'Reflect'
     refresh: 'Refresh'
     relations: 'Clients/suppliers Relationships Management'
-    relations_rights: 'Relationship'
     reopen: 'Reopen'
     reopen_journal: 'Reopen the journal'
     report: 'Report'
@@ -1114,7 +1109,6 @@ eng:
     reservoirs_create: 'Add a new reservoir'
     resource: 'View original document: %{resource} %{number}'
     resources: 'Resources management'
-    resources_rights: 'Ressources'
     rest_to_pay: 'Rest to pay'
     restore: 'Restore'
     result: 'Result'
@@ -1123,6 +1117,14 @@ eng:
       other: '%{count} results'
       zero: 'No results'
     reverse: 'Reverse condition'
+    right_modules:
+      accountancy: 'Accountancy'
+      company: 'Company'
+      finances: 'Finances'
+      management: 'Management'
+      production: 'Production'
+      relations: 'Relationship'
+      resources: 'Ressources'
     rights: 'Rights'
     role: 'Role'
     role_name: 'Fill the name and check all the needed rights'
