--- a/config-3/locales/fra/action.yml
+++ b/config-3/locales/fra/action.yml
@@ -338,7 +338,6 @@ fra:
     account_value_current: 'BRUT'
     account_value_previous: 'BRUT N-1'
     accountancy: 'Comptabilité'
-    accountancy_rights: 'Droits module Comptabilité'
     accounting_balance: 'Balance comptable'
     accounts: 'Comptes comptables utilisés'
     accounts_to_load: 'Plan de compte à charger'
@@ -430,7 +429,6 @@ fra:
     column_title: 'Titre'
     columns: 'Colonnes à importer'
     commission: 'Commission'
-    company_rights: 'Droits module Société'
     complement_sort: 'Trier les choix par nom'
     complements: 'Champs personnalisés'
     components: 'Composants'
@@ -648,7 +646,6 @@ fra:
       zero: 'Aucun courriels'
     management: 'Gestion commerciale'
     management_index: 'Index de la gestion commerciale'
-    management_rights: 'Droits module Commerce'
     mandates_fields: 'Vous devez saisir au moins une valeur dans l''un des champs'
     mandates_filters: 'Vous devez saisir au moins une valeur de recherche pour un des champs'
     mandates_new_fields: 'Vous devez saisir au moins une valeur dans l''un des champs de modification'
@@ -819,7 +816,6 @@ fra:
       stocks: 'Stocks'
     product_update: 'Modifier la fiche du produit'
     production: 'Gestion de la production'
-    production_rights: 'Droits module Production'
     productions: 'Productions'
     products: 'Produits'
     profitability: 'Rentabilité'
@@ -846,7 +842,6 @@ fra:
     refresh: 'Rafraîchir'
     register: 'Créer une nouvelle société' #!
     relations: 'Gestion des relations clients/fournisseurs'
-    relations_rights: 'Droits module Relations'
     reopen: 'Déclôturer'
     reopen_journal: 'Déclôturer le journal'
     report: 'Informations communes'
@@ -856,7 +851,6 @@ fra:
     reservoirs_create: 'Ajouter un réservoir'
     resource: 'Consulter la pièce d''origine : %{resource} %{number}'
     resources: 'Gestion des ressources humaines'
-    resources_rights: 'Droits module Ressources'
     rest_to_pay: 'Reste à payer'
     restore: 'Restaurer'
     result: 'Résultat'
@@ -865,6 +859,14 @@ fra:
       other: '%{count} résultats'
       zero: 'Aucun résultat'
     reverse: 'Appliquer la condition inverse'
+    right_modules:
+      accountancy: 'Droits module Comptabilité'
+      company: 'Droits module Société'
+      finances: 'Droits module Finances'
+      management: 'Droits module Commerce'
+      production: 'Droits module Production'
+      relations: 'Droits module Relations'
+      resources: 'Droits module Ressources'
     rights: 'Droits'
     role: 'Rôle'
     role_name: 'Entrez le nom du rôle puis attribuez lui ses droits'
