--- a/config-3/locales/spa/action.yml
+++ b/config-3/locales/spa/action.yml
@@ -339,7 +339,6 @@ spa:
     account_value_current: 'BRUT'
     account_value_previous: 'BRUT N-1'
     accountancy: 'contabilidad'
-    accountancy_rights: 'Derechos modulo contabilidad'
     #>accounting_balance: 'Accounting balance'
     accounts: 'Cuentos contables utilizados'
     #>accounts_to_load: 'Accounts to load'
@@ -433,7 +432,6 @@ spa:
     #>column_title: 'Title'
     #>columns: 'Columns to import'
     #>commission: 'Commission'
-    company_rights: 'Derechos modulo sociedad'
     #>complement_sort: 'Complement sort'
     #>complements: 'Complements'
     #>components: 'Components'
@@ -663,7 +661,6 @@ spa:
       zero: 'Ningun correo electronico'
     management: 'Administración comercial'
     #>management_index: 'Management index'
-    management_rights: 'Derechos modulo comercio'
     #>mandates_fields: 'You have to fill at least one field'
     #>mandates_filters: 'You have to fill at least one filter'
     #>mandates_new_fields: 'You have to fill at least one new field'
@@ -830,7 +827,6 @@ spa:
       #>stocks: 'Stocks'
     #>product_update: 'Product update'
     production: 'Administración de la producción'
-    production_rights: 'Derechos modulo producción'
     #>productions: 'Productions'
     #>products: 'Products'
     #>profitability: 'Profitability'
@@ -858,7 +854,6 @@ spa:
     #>refresh: 'Refresh'
     register: 'Crear una nueva compañía' #!
     relations: 'Relaciones clientos/abastecedores'
-    relations_rights: 'Derechos modulo relaciones'
     reopen: 'Volver a abrir el periodico'
     #>reopen_journal: 'Reopen the journal'
     report: 'Informaciones comunes'
@@ -868,7 +863,6 @@ spa:
     reservoirs_create: 'Añadir un deposito'
     resource: 'Consultar la pieza de origen : %{resource} %{number}'
     resources: 'Administración de los recursos humanos'
-    resources_rights: 'Derechos modulo recursos'
     #>rest_to_pay: 'Rest to pay'
     restore: 'Restaurar'
     result: 'Résulto'
@@ -877,6 +871,14 @@ spa:
       other: '%{count} resultado'
       zero: 'Ningun resultado'
     #>reverse: 'Reverse condition'
+    right_modules:
+      accountancy: 'Derechos modulo contabilidad'
+      company: 'Derechos modulo sociedad'
+      #>finances: 'Finances'
+      management: 'Derechos modulo comercio'
+      production: 'Derechos modulo producción'
+      relations: 'Derechos modulo relaciones'
+      resources: 'Derechos modulo recursos'
     rights: 'Derechos'
     #>role: 'Role'
     role_create: 'Añadir un papel' #!
