--- a/config-3/locales/arb/action.yml
+++ b/config-3/locales/arb/action.yml
@@ -340,7 +340,6 @@ arb:
     account_value_current: 'القيمة الحالية'
     account_value_previous: 'القيمة السابقة'
     accountancy: 'المحاسبة'
-    accountancy_rights: 'حقوق المحاسبة'
     #>accounting_balance: 'Accounting balance'
     accounts: 'حسابات المحاسب المستخدمة'
     #>accounts_to_load: 'Accounts to load'
@@ -437,7 +436,6 @@ arb:
     column_title: 'العنوان'
     columns: 'اعمدة الاستيراد'
     commission: 'عمولة'
-    company_rights: 'حقوق الشركة'
     #>complement_sort: 'Complement sort'
     #>complements: 'Complements'
     components: 'العناصر'
@@ -688,7 +686,6 @@ arb:
       zero: 'ولا بريد الكتروني '
     management: 'ادارة الاعمال'
     management_index: 'دليل ادارة الاعمال'
-    management_rights: 'حقوق التجارة'
     mandate_create: 'انشاء تفويض' #!
     #>mandates_fields: 'You have to fill at least one field'
     #>mandates_filters: 'You have to fill at least one filter'
@@ -870,7 +867,6 @@ arb:
       #>stocks: 'Stocks'
     product_update: 'تعديل تفاصيل المنتج'
     production: 'ادارة الانتاج'
-    production_rights: 'حق الانتاج'
     productions: 'المنتجات'
     products: 'فئة المنتج'
     #>profitability: 'Profitability'
@@ -901,7 +897,6 @@ arb:
     refresh: 'تحديث'
     register: 'تسجيل شركة جديدة' #!
     relations: 'ادارة علاقات العملاء / والمموليين'
-    relations_rights: 'حقوق العلاقات'
     reopen: 'فتح الدفتر اليومي'
     #>reopen_journal: 'Reopen the journal'
     report: 'Informations communes'
@@ -911,7 +906,6 @@ arb:
     reservoirs_create: 'اضافة خزان احتياطي'
     resource: 'مراجعة السجلات الاصلية : %{resource} %{number}'
     resources: 'ادارة الموارد البشرية'
-    resources_rights: 'حقوق المصادر'
     rest_to_pay: 'القيمة المتبقية'
     restore: 'تجديد'
     result: 'الناتج'
@@ -920,6 +914,14 @@ arb:
       other: '%{count} نتائج'
       zero: 'ولا نتيجة'
     reverse: 'تطبيق الحالة العكسية'
+    right_modules:
+      accountancy: 'حقوق المحاسبة'
+      company: 'حقوق الشركة'
+      #>finances: 'Finances'
+      management: 'حقوق التجارة'
+      production: 'حق الانتاج'
+      relations: 'حقوق العلاقات'
+      resources: 'حقوق المصادر'
     rights: 'الحقوق'
     #>role: 'Role'
     role_create: 'اضافة مهام' #!
