--- a/config-3/locales/jpn/action.yml
+++ b/config-3/locales/jpn/action.yml
@@ -333,7 +333,6 @@ jpn:
     #>account_value_current: 'Current Value'
     #>account_value_previous: 'Previous Value'
     #>accountancy: 'Accountancy'
-    #>accountancy_rights: 'Accountancy'
     #>accounting_balance: 'Accounting balance'
     #>accounts: 'Accounts'
     #>accounts_to_load: 'Accounts to load'
@@ -425,7 +424,6 @@ jpn:
     #>column_title: 'Title'
     #>columns: 'Columns to import'
     #>commission: 'Commission'
-    #>company_rights: 'Company'
     #>complement_sort: 'Complement sort'
     #>complements: 'Complements'
     #>components: 'Components'
@@ -631,7 +629,6 @@ jpn:
     #>load_demo_data: 'Load demo data'
     locale: '言語'
     #>localization: 'Localization'
-    location_tabbox: #!
     #>lock: 'Lock'
     #>mail: 'Send an email'
     #>mailing: 'Mailing'
@@ -641,7 +638,6 @@ jpn:
       #>zero: 'No emails'
     #>management: 'Management (Sales, purchases and stocks)'
     #>management_index: 'Management index'
-    #>management_rights: 'Management'
     #>mandates_fields: 'You have to fill at least one field'
     #>mandates_filters: 'You have to fill at least one filter'
     #>mandates_new_fields: 'You have to fill at least one new field'
@@ -682,9 +678,6 @@ jpn:
     #>national_reduce_vat_collected: 'National Reduced Tax collected'
     #>national_vat_collected: 'National Tax collected'
     #>nature: 'Type'
-    nb_mandates: #!
-    nb_products: #!
-    nb_purchases: #!
     #>nb_years: 'Years'
     #>need_entities_to_consult_mandates: 'You have to create some people before using mandates'
     #>need_warehouse_to_create_production: 'You have to register a warehouse before using production'
@@ -802,7 +795,6 @@ jpn:
       #>stocks: 'Stocks'
     #>product_update: 'Product update'
     #>production: 'Production management'
-    #>production_rights: 'Production'
     #>productions: 'Productions'
     #>products: 'Products'
     #>profitability: 'Profitability'
@@ -828,7 +820,6 @@ jpn:
     #>reflect: 'Reflect'
     #>refresh: 'Refresh'
     #>relations: 'Clients/suppliers Relationships Management'
-    #>relations_rights: 'Relationship'
     #>reopen: 'Reopen'
     #>reopen_journal: 'Reopen the journal'
     #>report: 'Report'
@@ -838,7 +829,6 @@ jpn:
     #>reservoirs_create: 'Add a new reservoir'
     #>resource: 'View original document: %{resource} %{number}'
     #>resources: 'Resources management'
-    #>resources_rights: 'Ressources'
     #>rest_to_pay: 'Rest to pay'
     #>restore: 'Restore'
     #>result: 'Result'
@@ -847,6 +837,14 @@ jpn:
       #>other: '%{count} results'
       #>zero: 'No results'
     #>reverse: 'Reverse condition'
+    right_modules:
+      #>accountancy: 'Accountancy'
+      #>company: 'Company'
+      #>finances: 'Finances'
+      #>management: 'Management'
+      #>production: 'Production'
+      #>relations: 'Relationship'
+      #>resources: 'Ressources'
     #>rights: 'Rights'
     #>role: 'Role'
     #>role_name: 'Fill the name and check all the needed rights'
@@ -1109,7 +1107,6 @@ jpn:
     #>changes_have_not_been_reflected: 'The changes have not been reflected in the stocks state'
     #>closed_financial_years: 'The financial year has been closed successfully'
     #>columns_are_already_uses: 'One or many columns are selected many times'
-    draft_entries_are_validated: #!
     draft_entry_lines_are_validated:
       #>one: 'One entry has been validated'
       #>other: '%{count} entries have been validated'
@@ -1175,7 +1172,6 @@ jpn:
     #>unvalid_version_for_restore: 'The version of the software used to perform the backup does not match the current version of the software'
     #>update_is_done: 'The update has been made'
     #>validates_old_inventories: 'It is advisable to clear or validate uncommitted inventories before making a new'
-    x_unpointed_journal_entries: #!
     x_unpointed_journal_entry_lines:
       #>one: 'There is one entry to point'
       #>other: 'There are %{count} entries to point'
@@ -1184,7 +1180,6 @@ jpn:
     #>you_must_select_a_file_to_import: 'You must select a file to import'
     #>you_will_lose_all_your_current_data: 'If you continue, you will lose all your data being entered. Would you continue?'
   preferences:
-    accountancy: #!
     #>bank_journal: 'Default bank journal'
     #>bookkeep_automatically: 'Activate the automatic bookkeeping'
     #>bookkeep_in_draft: 'Save the records in draft mode during bookkeeping'
@@ -1201,16 +1196,13 @@ jpn:
     #>financial_internal_transfers_accounts: 'Internal transfers'
     #>financial_payments_to_deposit_accounts: 'Payments to deposit accounts'
     #>forward_journal: 'Default carried-forward journal'
-    general: #!
     #>incoming_deliveries_sequence: 'Numeration of incoming deliveries'
     #>incoming_payments_sequence: 'Numeration of incoming payments'
-    management: #!
     #>outgoing_deliveries_sequence: 'Numeration of outgoing deliveries'
     #>outgoing_payments_sequence: 'Numeration of disbursements'
     #>products_accounts: 'Products accounts'
     #>purchases_journal: 'Default purchases journal'
     #>purchases_sequence: 'Numeration of purchases'
-    relations: #!
     #>sales_invoices_sequence: 'Numeration of sales invoices'
     #>sales_journal: 'Default sales journal'
     #>sales_sequence: 'Numeration of sales'
