--- a/config-3/locales/jpn/languages.yml
+++ b/config-3/locales/jpn/languages.yml
@@ -1,106 +1,106 @@
 jpn:
   languages:
-    #>afr: 'Afrikaans'
-    #>amh: 'Amharic'
-    #>arb: 'Arabic (standard)'
-    #>aym: 'Aymara'
-    #>aze: 'Azerbaijani'
-    #>bel: 'Belarusian'
-    #>ben: 'Bengali'
+    afr: 'アフリカーンス語'
+    amh: 'アムハラ語'
+    arb: 'アラビア語'
+    aym: 'アイマラ語'
+    aze: 'アゼルバイジャン語'
+    bel: 'ベラルーシ語'
+    ben: 'ベンガル語'
     #>bis: 'Bislama'
-    #>bul: 'Bulgarian'
-    #>cat: 'Catalan'
-    #>ces: 'Czech'
-    #>cmn: 'Mandarin Chinese'
+    bul: 'ブルガリア語'
+    cat: 'カタルーニャ語'
+    ces: 'チェコ語'
+    cmn: '北方方言'
     #>crs: 'Seselwa Creole French'
-    #>dan: 'Danish'
-    #>deu: 'German'
+    dan: 'デンマーク語'
+    deu: 'ドイツ語'
     #>div: 'Divehi'
-    #>dzo: 'Dzongkha'
-    #>ell: 'Greek'
+    dzo: 'ゾンカ語'
+    ell: 'ギリシア語'
     eng: '英語'
-    #>est: 'Estonian'
-    #>fas: 'Persian'
-    #>fij: 'Fijian'
-    #>fil: 'Filipino'
-    #>fin: 'Finnish'
+    est: 'エストニア語'
+    fas: 'ペルシア語'
+    fij: 'フィジー語'
+    fil: 'フィリピン語'
+    fin: 'フィンランド語（スオミ語）'
     fra: 'フランス語'
     #>gil: 'Gilbertese'
-    #>gle: 'Irish'
-    #>grn: 'Guarani'
-    #>hat: 'Haitian; Haitian Creole'
-    #>heb: 'Hebrew'
-    #>hin: 'Hindi'
+    gle: 'アイルランド語（アイルランド・ゲール語）'
+    grn: 'グアラニー語'
+    hat: 'ハイチ・クレオール語'
+    heb: 'ヘブライ語'
+    hin: 'ヒンディー語'
     #>hmo: 'Hiri Motu'
-    #>hrv: 'Croatian'
-    #>hun: 'Hungarian'
-    #>hye: 'Armenian'
+    hrv: 'クロアチア語'
+    hun: 'ハンガリー語'
+    hye: 'アルメニア語'
     #>iba: 'Iban'
-    #>ind: 'Indonesian'
-    #>isl: 'Icelandic'
-    #>ita: 'Italian'
+    ind: 'インドネシア語'
+    isl: 'アイスランド語'
+    ita: 'イタリア語'
     jpn: '日本語'
-    #>kat: 'Georgian'
-    #>kaz: 'Kazakh'
-    #>khm: 'Khmer'
-    #>kir: 'Kyrgyz'
-    #>kor: 'Korean'
-    #>lao: 'Lao'
-    #>lat: 'Latin'
-    #>lav: 'Latvian'
-    #>lit: 'Lithuanian'
-    #>ltz: 'Luxembourgish; Letzeburgesch'
-    #>mah: 'Marshall'
-    #>mkd: 'Macedonian'
-    #>mlg: 'Malagasy'
-    #>mlt: 'Maltese'
-    #>mon: 'Mongolian'
-    #>mri: 'Maori'
-    #>msa: 'Malay (generic)'
-    #>mya: 'Burmese'
-    #>nau: 'Nauru'
-    #>nde: 'Ndebele, North'
-    #>nep: 'Nepali'
-    #>nld: 'Dutch'
-    #>nor: 'Norwegian'
-    #>nya: 'Chichewa; Nyanja'
+    kat: 'グルジア語'
+    kaz: 'カザフ語'
+    khm: 'クメール語'
+    kir: 'キルギス語'
+    kor: '朝鮮語'
+    lao: 'ラーオ語'
+    lat: 'ラテン語'
+    lav: 'ラトビア語（ラトヴィア語）'
+    lit: 'リトアニア語'
+    ltz: 'ルクセンブルク語'
+    mah: 'マーシャル語'
+    mkd: 'マケドニア語'
+    mlg: 'マダガスカル語'
+    mlt: 'マルタ語'
+    mon: 'モンゴル語（蒙古語）'
+    mri: 'マオリ語'
+    msa: 'マレー語'
+    mya: 'ビルマ語'
+    nau: 'ナウル語'
+    nde: '北ンデベレ語'
+    nep: 'ネパール語'
+    nld: 'オランダ語'
+    nor: 'ノルウェー語'
+    nya: 'チェワ語（チチェワ）'
     #>nzs: 'New Zealand Sign Language'
-    #>pau: 'Palauan'
-    #>pol: 'Polish'
-    #>por: 'Portuguese'
+    pau: 'パラオ語'
+    pol: 'ポーランド語'
+    por: 'ポルトガル語'
     #>pov: 'Crioulo, Upper Guinea'
-    #>pus: 'Pushto'
-    #>que: 'Quechua'
+    pus: 'パシュトー語'
+    que: 'ケチュア語'
     #>rar: 'Rarotongan'
-    #>ron: 'Romanian'
-    #>run: 'Rundi'
-    #>rus: 'Russian'
-    #>sag: 'Sango'
-    #>sin: 'Sinhala; Sinhalese'
-    #>slk: 'Slovak'
-    #>slv: 'Slovenian'
-    #>smo: 'Samoan'
-    #>sna: 'Shona'
-    #>som: 'Somali'
-    #>sot: 'Sotho, Southern'
+    ron: 'ルーマニア語'
+    run: 'ルンディ語'
+    rus: 'ロシア語'
+    sag: 'サンゴ語'
+    sin: 'シンハラ語（シンハリ語）'
+    slk: 'スロバキア語'
+    slv: 'スロベニア語'
+    smo: 'サモア語'
+    sna: 'ショナ語'
+    som: 'ソマリ語'
+    sot: 'ソト語'
     spa: 'スペイン語'
-    #>sqi: 'Albanian'
-    #>srp: 'Serbian'
-    #>swa: 'Swahili (generic)'
+    sqi: 'アルバニア語'
+    srp: 'セルビア語'
+    swa: 'スワヒリ語'
     #>swb: 'Comorian'
-    #>swe: 'Swedish'
-    #>tam: 'Tamil'
-    #>tet: 'Tetum'
-    #>tgk: 'Tajik'
-    #>tha: 'Thai'
-    #>tir: 'Tigrinya'
-    #>ton: 'Tonga (Tonga Islands)'
-    #>tpi: 'Tok Pisin'
-    #>tuk: 'Turkmen'
-    #>tur: 'Turkish'
-    #>tvl: 'Tuvalu'
+    swe: 'スウェーデン語'
+    tam: 'タミル語'
+    tet: 'テトゥン語'
+    tgk: 'タジク語'
+    tha: 'タイ語'
+    tir: 'ティグリニャ語'
+    ton: 'トンガ語'
+    tpi: 'トク・ピシン'
+    tuk: 'トルクメン語（トゥルクメン語）'
+    tur: 'トルコ語'
+    tvl: 'ツバル語（トゥヴァル語）'
     #>tzm: 'Tamazight, Central Atlas'
-    #>ukr: 'Ukrainian'
-    #>urd: 'Urdu'
-    #>uzb: 'Uzbek'
-    #>vie: 'Vietnamese'
+    ukr: 'ウクライナ語'
+    urd: 'ウルドゥー語'
+    uzb: 'ウズベク語'
+    vie: 'ベトナム語（ヴェトナム語）'
