--- a/config-3/locales/eng/prints/purchase_order.xml
+++ b/config-3/locales/eng/prints/purchase_order.xml
@@ -30,9 +30,9 @@
       <table collection="purchase_order.lines" fixed="true">
 	<column label="Produit" property="designation" width="100mm"/>
 	<column label="Qté." property="quantity" width="13mm" numeric="money"/>
-	<column label="Prix Unitaire HT" property="price/amount" width="22mm" numeric="money"/>
-	<column label="Montant HT" property="amount" width="20mm" numeric="money"/>
-	<column label="Montant TVA" property="taxes" width="20mm" numeric="money"/>
+	<column label="Prix Unitaire HT" property="price/pretax_amount" width="22mm" numeric="money"/>
+	<column label="Montant HT" property="pretax_amount" width="20mm" numeric="money"/>
+	<column label="Montant TVA" property="taxes_amount" width="20mm" numeric="money"/>
 	<column label="Taux T.V.A." property="price.tax/amount" width="15mm" align="center"/>
       </table>
 
@@ -41,9 +41,9 @@
         <set right="90mm" top="1mm">
           <text value="Totaux ({{purchase_order.lines[0].price.currency.code}})" top="0.5mm" left="34mm" align="right" bold="true"/>
           <text value="Net à payer ({{purchase_order.lines[0].price.currency.code}})" top="6mm" left="34mm" align="right" bold="true" size="11.5"/>
-          <text value="{{purchase_order.amount_with_taxes?numeric}}" top="6mm" left="55mm" align="center" bold="true" size="12"/>
-          <text value="{{purchase_order.amount?numeric}}" top="0.5mm" left="54.5mm" align="right"/>
-          <text value="{{purchase_order.taxes?numeric}}" top="0.5mm" left="74.5mm" align="right"/>
+          <text value="{{purchase_order.amount?numeric}}" top="6mm" left="55mm" align="center" bold="true" size="12"/>
+          <text value="{{purchase_order.pretax_amount?numeric}}" top="0.5mm" left="54.5mm" align="right"/>
+          <text value="{{purchase_order.taxes_amount?numeric}}" top="0.5mm" left="74.5mm" align="right"/>
           <rectangle width="75mm" height="4mm" border="0.5 solid #000"/>
           <rectangle width="75mm" height="7mm" border="0.5 solid #000" top="4mm"/>
           <line path="35mm,0 ; 35mm,11mm" border="0.5 solid #000"/>
