Adds missing translations and fixes a bug on contact.language
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1786 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/fra/action.yml
+++ b/config-3/locales/fra/action.yml
@@ -353,6 +353,7 @@ fra:
     add_payment: 'Ajouter un encaissement'
     add_quickly_a_line: 'Ajouter rapidement une ligne de produit'
     address: 'Adresse'
+    all: 'Tous'
     all_accounts: 'Tous les comptes'
     all_areas: '--- Toutes les zones postales ---'
     all_conditions: 'toutes les conditions'
