Corrects bad translation. Fixes bug on 'belongs_to :company' of CompanyRecord
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1792 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/locales/arb/action.yml
+++ b/config-3/locales/arb/action.yml
@@ -1005,7 +1005,7 @@ arb:
     stock_move_create: 'اضافة حركة جديدة للاسهم' #!
     stock_transfer_create: 'اضافة عملية نقل ام خسارة الاسهم' #!
     stocks: 'ادارة الاسهم'
-    #>stocks_parameters: 'Stock management'
+    #>stocks_preferences: 'Stock management'
     stop: 'لغاية'
     string_case: 'خيارات للنص'
     subject: 'الموضوع'
