--- a/config-3/locales/jpn/action.yml
+++ b/config-3/locales/jpn/action.yml
@@ -920,7 +920,7 @@ jpn:
     #>stock_max: 'Stock max'
     #>stock_min: 'Stock min'
     #>stocks: 'Stocks'
-    #>stocks_parameters: 'Stock management'
+    #>stocks_preferences: 'Stock management'
     #>stop: 'Stop'
     #>string_case: 'String case'
     #>subject: 'Subject'
