--- a/config-3/locales/eng/action.yml
+++ b/config-3/locales/eng/action.yml
@@ -90,6 +90,7 @@ eng:
       help: 'Help'
       import: 'Import'
       index: 'Hello, %{user}'
+      #>list_company: 'List company'
       listing_create: 'Add a new listing'
       #>listing_delete: 'Listing delete'
       #>listing_duplicate: 'Listing duplicate'
